--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-    <h1>En contrucción</h1>
+    <h1>Página en construcción</h1>
     <h2>Estaremos en breve</h2>
     
 </body>
