--- a/index.html
+++ b/index.html
@@ -8,14 +8,25 @@
         body{
             background: #000;
             color: #fff;
+            
+        }
+
+        .header{
             display: flex;
             flex-direction: column;
             align-items: center;
             padding: 10rem;
         }
 
+        .header .image{
+            margin: 0 auto;
+        }
+
         .container{
-            padding: 10rem;
+            padding: 2rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         
 
